Fix dark mode and nav spacing

--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,10 @@ html {
 
 body {
     font-family: 'Noto Sans Mono', monospace;
-    margin: 0;
-}
+    margin: 0;}
 
 * {
-    transition: background-color 0.3s ease, color .3s ease, border-color .3s ease;
+    transition: background-color .3s ease, color .3s ease, border-color .3s ease;
 }
 
 .light-mode {
@@ -27,6 +26,8 @@ body {
     --buttonText: black;
     --buttonHoverBg: black;
     --buttonHoverText: white;
+    --toggleBg: rgb(235, 235, 235);
+    --toggleHoverBg: rgb(215, 215, 215);
 }
 
 .dark-mode {
@@ -43,6 +44,8 @@ body {
     --buttonText: white;
     --buttonHoverBg: white;
     --buttonHoverText: black;
+    --toggleBg: rgb(60, 60, 60);
+    --toggleHoverBg: rgb(80, 80, 80);
 }
 
 section {
@@ -91,6 +94,27 @@ section {
 nav {
     display: flex;
     justify-content: space-between;
+    line-height: 100%;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.home {
+    display: flex;
+    justify-content: center;
+    color: var(--fontColor);
+    /* margin-top: 15px; */
+    margin-left: 15px;
+}
+
+.home a {
+    font-size: 15px;
+    color: var(--fontColor);
+}
+
+.home a:hover {
+    color: gray;
 }
 
 .navbar {
@@ -104,9 +128,12 @@ nav {
     display: flex;
     list-style-type: none;
     justify-content: space-around;
-    width: 500px;
+    width: 430px;
     justify-content: space-around;
     font-size: 15px;
+    margin: 0px;
+    padding-left: 0;
+    padding-right: 10px;
 }
 
 .navbar ul li a {
@@ -119,21 +146,33 @@ nav {
 }
 
 .toggle {
+    display: flex;
     position: relative;
+    width: 33px;
+    height: 33px;
+    background-color: var(--toggleBg);
+    border-radius: 4px;
+    /* margin-right: 30px; */
+    line-height: 33px;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.toggle:hover {
+    background-color: var(--toggleHoverBg);
+    cursor: pointer;
 }
 
 .sun, .moon {
-    font-size: 15px;
+    font-size: 20px;
     width: fit-content;
     height: fit-content;
-    margin-right: 20px;
     /* padding: 10px; */
     /* padding-right: 10px; */
 }
 
 .moon {
     position: absolute;
-    inset: 0;
 }
 
 .sun-logo {
@@ -141,13 +180,13 @@ nav {
     transition: all .3s ease-out;
 }
 
-.animate-sun {
-    opacity: 0;
-}
-
 .moon-logo {
     opacity: 0;
     transition: all .3s ease-out;
+}
+
+.animate-sun {
+    opacity: 0;
 }
 
 .animate-moon {
